--- a/src/components/forms/FormLogin.astro
+++ b/src/components/forms/FormLogin.astro
@@ -29,7 +29,11 @@ import "src/styles/forms.css";
 		<IconPassword />
 	</div>
 	<p>
-		<a href="/signin">¿Has olvidado tu contraseña?</a>
+		<a
+			href="/password"
+			aria-label="Ir a la página para restablecer contraseña"
+			data-astro-reload>¿Has olvidado tu contraseña?</a
+		>
 	</p>
 </div>
 
