--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -7,7 +7,7 @@ import BtnColor from "@components/BtnColor.astro";
     <main>
         <h1>No se encontró la página</h1>
         <a href="/" aria-label="Volver a la anterior pagina">
-            <BtnColor text="Volver" type="no-found" />
+            <BtnColor text="VOLVER" type="no-found" />
         </a>
     </main>
 </Layout>
@@ -21,7 +21,7 @@ import BtnColor from "@components/BtnColor.astro";
         height: 100vh;
         gap: 2rem;
 
-        h1{
+        h1 {
             text-align: center;
             text-wrap: pretty;
         }
