--- a/src/components/BtnColor.astro
+++ b/src/components/BtnColor.astro
@@ -3,14 +3,19 @@ import LoaderIcon from "@components/loader/LoaderIcon.astro";
 
 const { text, type } = Astro.props;
 
-const isForm = type == 'form'
+const isForm = type == "form";
 ---
 
-{isForm ? <button class=`btn ${type}`>
+{
+    isForm ? (
+        <button class={`btn ${type}`}>
             {text}
-            <LoaderIcon /> 
-          </button> 
-: <button class=`btn ${type}`>{text}</button>}
+            <LoaderIcon />
+        </button>
+    ) : (
+        <button class={`btn ${type}`}>{text}</button>
+    )
+}
 
 <style>
     button.btn {
@@ -49,19 +54,19 @@ const isForm = type == 'form'
 
             background-color: var(--bg-color-dark);
 
-            html.light &{
+            html.light & {
                 background-color: var(--bg-color-light);
             }
 
-            svg{
+            svg {
                 position: absolute;
                 top: -27.5px;
                 left: calc(50% - 45px);
 
-                width:90px;
+                width: 90px;
             }
         }
-        &#disable{
+        &#disable {
             color: transparent;
             pointer-events: none;
 
@@ -81,16 +86,32 @@ const isForm = type == 'form'
             }
         }
 
-        &.no-found{
+        &.no-found {
             margin: auto;
             max-width: 400px;
             height: 40px;
         }
         &.change_password {
-            position: relative;
-            max-width: 100px;
+            font-weight: 100;
             height: 25px;
             margin: 0;
+
+            body.red &,
+            body.green & {
+                border-color: var(--bg-color-light);
+                color: inherit;
+            }
+
+            html.light > body.red &,
+            html.light > body.green & {
+                border-color: var(--bg-color-dark);
+                color: inherit;
+            }
+        }
+        &.reset_password {
+            max-width: 200px;
+            height: 25px;
+            margin: 2rem auto 0;
         }
 
         &:hover {
