--- a/src/sections/TextLink.astro
+++ b/src/sections/TextLink.astro
@@ -12,7 +12,7 @@ const { text, textN, href } = Astro.props;
     >{text} <strong>{textN}</strong></a
 >
 <style>
-    .text__link {
+    a.text__link {
         text-decoration: none;
         margin: 1.5rem auto;
         font-size: 1rem;
