Enviar correo al cambiar la contraseña

--- a/src/components/FormPassword.astro
+++ b/src/components/FormPassword.astro
@@ -8,7 +8,7 @@ import BackgroundColors from "@components/BackgroundColors.astro";
     <h1>Restablecer contraseña</h1>
 
     <BackgroundColors type="change_password">
-        <form>
+        <form id="form-email">
             <div id="forgot_password">
                 <p>Ingrese su correo para restablecer su contraseña:</p>
                 <input
@@ -21,7 +21,9 @@ import BackgroundColors from "@components/BackgroundColors.astro";
             <div id="change_password">
                 <p>Se enviará un código de verificación al correo:</p>
             </div>
-            <BtnColor text="CONFIRMAR" type="reset_password" />
+            <span>
+                <BtnColor text="CONFIRMAR" type="form" />
+            </span>
         </form>
     </BackgroundColors>
 
@@ -93,6 +95,8 @@ import BackgroundColors from "@components/BackgroundColors.astro";
             }
             span {
                 width: 100%;
+                display: flex;
+                margin: 2rem auto 0;
             }
         }
     }
@@ -107,6 +111,8 @@ import BackgroundColors from "@components/BackgroundColors.astro";
 </style>
 
 <script>
+    import { sendEmail } from "@scripts/password/changePassword";
+
     class FormPassword extends HTMLElement {
         constructor() {
             super();
@@ -132,6 +138,15 @@ import BackgroundColors from "@components/BackgroundColors.astro";
                 ) as HTMLElement;
                 $div.style.display = "flex";
             }
+
+            const $form = this.querySelector("#form-email") as HTMLElement;
+            $form.addEventListener("submit", (e) => {
+                e.preventDefault();
+
+                const formElement = e.target as HTMLFormElement;
+                const email = Object.fromEntries(new FormData(formElement));
+                sendEmail(email);
+            });
         }
     }
 
