Interfaz enviar correo mejorada

--- a/src/components/FormPassword.astro
+++ b/src/components/FormPassword.astro
@@ -21,6 +21,7 @@ import BackgroundColors from "@components/BackgroundColors.astro";
             <div id="change_password">
                 <p>Se enviará un código de verificación al correo:</p>
             </div>
+            <p id="error">El correo no se encuentra registrado</p>
             <span>
                 <BtnColor text="CONFIRMAR" type="form" />
             </span>
@@ -93,6 +94,17 @@ import BackgroundColors from "@components/BackgroundColors.astro";
                     }
                 }
             }
+
+            p#error{
+                text-align: center;
+                opacity: 0;
+                color: var(--red-700);
+
+                html.light & {
+                    color: var(--red);
+                }
+            }
+
             span {
                 width: 100%;
                 display: flex;
@@ -111,42 +123,27 @@ import BackgroundColors from "@components/BackgroundColors.astro";
 </style>
 
 <script>
-    import { sendEmail } from "@scripts/password/changePassword";
+    import {
+        renderChangePassword,
+        renderForgotPassword,
+    } from "@scripts/password/renderForms";
+    import { enableSendEmail } from "@scripts/password/handlers";
 
     class FormPassword extends HTMLElement {
         constructor() {
             super();
         }
         connectedCallback() {
-            const dataCacheUser = sessionStorage.getItem("data-user");
+            const cacheEmailUser = JSON.parse(
+                sessionStorage.getItem("data-user"),
+            );
+            const emailUser = sessionStorage.getItem("email-user");
 
-            if (dataCacheUser) {
-                const $div = this.querySelector(
-                    "#change_password",
-                ) as HTMLElement;
-                const $anchor = this.querySelector(
-                    ".text__link",
-                ) as HTMLElement;
+            if (cacheEmailUser) renderChangePassword(cacheEmailUser.email, this);
+            else if (emailUser) renderChangePassword(emailUser, this);
+            else renderForgotPassword(this);
 
-                $div.style.display = "flex";
-                $anchor.style.display = "none";
-                this.querySelector("#change_password p").textContent +=
-                    " " + JSON.parse(dataCacheUser).email;
-            } else {
-                const $div = this.querySelector(
-                    "#forgot_password",
-                ) as HTMLElement;
-                $div.style.display = "flex";
-            }
-
-            const $form = this.querySelector("#form-email") as HTMLElement;
-            $form.addEventListener("submit", (e) => {
-                e.preventDefault();
-
-                const formElement = e.target as HTMLFormElement;
-                const email = Object.fromEntries(new FormData(formElement));
-                sendEmail(email);
-            });
+            enableSendEmail(this);
         }
     }
 
