--- a/src/components/loader/LoaderIcon.astro
+++ b/src/components/loader/LoaderIcon.astro
@@ -3,7 +3,7 @@
     viewBox="0 0 100 100"
     style="shape-rendering:auto;display:block;background:0 0"
     ><circle
-        id="loader"
+        class="loader"
         stroke-dasharray="61.26105674500097 22.420352248333657"
         r="13"
         stroke-width="3"
