--- a/src/pages/password.astro
+++ b/src/pages/password.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from "@layouts/Layout.astro";
-import FormPassword from "@components/FormPassword.astro";
+import FormPassword from "@components/password/FormPassword.astro";
 ---
 
 <Layout title="BrokerView | Cambiar contraseña" hasFooter={true}>
