--- a/src/components/password/FormPassword.astro
+++ b/src/components/password/FormPassword.astro
@@ -1,6 +1,7 @@
 ---
 import TextLink from "@sections/TextLink.astro";
-import BtnColor from "@components/BtnColor.astro";
+import FormEmail from "@components/password/FormEmail.astro";
+import FormCode from "@components/password/FormCode.astro";
 import BackgroundColors from "@components/BackgroundColors.astro";
 ---
 
@@ -8,24 +9,10 @@ import BackgroundColors from "@components/BackgroundColors.astro";
     <h1>Restablecer contraseña</h1>
 
     <BackgroundColors type="change_password">
-        <form id="form-email">
-            <div id="forgot_password">
-                <p>Ingrese su correo para restablecer su contraseña:</p>
-                <input
-                    type="email"
-                    name="email"
-                    id="email"
-                    placeholder="nombre@gmail.com"
-                />
-            </div>
-            <div id="change_password">
-                <p>Se enviará un código de verificación al correo:</p>
-            </div>
-            <p id="error">El correo no se encuentra registrado</p>
-            <span>
-                <BtnColor text="CONFIRMAR" type="form" />
-            </span>
-        </form>
+        <div id="forms">
+            <FormEmail />
+            <FormCode />
+        </div>
     </BackgroundColors>
 
     <TextLink
@@ -49,15 +36,14 @@ import BackgroundColors from "@components/BackgroundColors.astro";
             margin-bottom: 2.5rem;
         }
 
-        form {
-            display: flex;
-            flex-direction: column;
+        div#forms {
+            position: relative;
 
-            width: 100%;
+            width: auto;
             height: auto;
 
+            overflow: hidden;
             z-index: 1;
-            padding: 20px;
             border-radius: 8px;
 
             background-color: var(--bg-color-dark);
@@ -66,18 +52,36 @@ import BackgroundColors from "@components/BackgroundColors.astro";
                 background-color: var(--bg-color-light);
             }
 
-            div {
-                display: none;
+            &.send {
+                form#form-email {
+                    left: -100%;
+                }
+                form#form-code {
+                    left: 0;
+                }
+            }
 
+            form {
+                display: flex;
                 flex-direction: column;
-                gap: 1rem;
 
-                padding-bottom: 2rem;
+                width: 100%;
+                height: 255px;
 
-                p {
+                padding: 20px;
+                border-radius: 8px;
+
+                transition: left 0.5s ease;
+
+                p.error {
                     text-align: center;
-                    letter-spacing: 0.5px;
-                    font-size: 1.2rem;
+                    opacity: 0;
+                    font-size: 0.935rem;
+                    color: var(--red-700);
+
+                    html.light & {
+                        color: var(--red);
+                    }
                 }
 
                 input {
@@ -90,25 +94,14 @@ import BackgroundColors from "@components/BackgroundColors.astro";
                     }
 
                     html.light & {
-                        background-color: #c9c9c9;
+                        background-color: #b8b8b8;
                     }
                 }
-            }
 
-            p#error{
-                text-align: center;
-                opacity: 0;
-                color: var(--red-700);
-
-                html.light & {
-                    color: var(--red);
+                span {
+                    width: 100%;
+                    display: flex;
                 }
-            }
-
-            span {
-                width: 100%;
-                display: flex;
-                margin: 2rem auto 0;
             }
         }
     }
@@ -123,11 +116,11 @@ import BackgroundColors from "@components/BackgroundColors.astro";
 </style>
 
 <script>
+    import { renderFormsEmail } from "@scripts/password/renderEmailForms";
     import {
-        renderChangePassword,
-        renderForgotPassword,
-    } from "@scripts/password/renderForms";
-    import { enableSendEmail } from "@scripts/password/handlers";
+        enableSendEmail,
+        enableSendCode,
+    } from "@scripts/password/handlers";
 
     class FormPassword extends HTMLElement {
         constructor() {
@@ -139,11 +132,10 @@ import BackgroundColors from "@components/BackgroundColors.astro";
             );
             const emailUser = sessionStorage.getItem("email-user");
 
-            if (cacheEmailUser) renderChangePassword(cacheEmailUser.email, this);
-            else if (emailUser) renderChangePassword(emailUser, this);
-            else renderForgotPassword(this);
+            renderFormsEmail(cacheEmailUser, emailUser, this);
+            enableSendEmail(this, cacheEmailUser, emailUser);
 
-            enableSendEmail(this);
+            enableSendCode(this, cacheEmailUser, emailUser);
         }
     }
 
