Mejoras al escribir el código

--- a/src/components/password/FormCode.astro
+++ b/src/components/password/FormCode.astro
@@ -5,12 +5,48 @@ import BtnColor from "@components/BtnColor.astro";
 <form id="form-code">
     <p>Ingrese el código que se envió al correo</p>
     <div id="code">
-        <input type="text" name="1" id="1" maxlength="1" autocomplete="off" />
-        <input type="text" name="2" id="2" maxlength="1" autocomplete="off" />
-        <input type="text" name="3" id="3" maxlength="1" autocomplete="off" />
-        <input type="text" name="4" id="4" maxlength="1" autocomplete="off" />
-        <input type="text" name="5" id="5" maxlength="1" autocomplete="off" />
-        <input type="text" name="6" id="6" maxlength="1" autocomplete="off" />
+        <input
+            class="code-input"
+            type="text"
+            name="1"
+            maxlength="1"
+            autocomplete="off"
+        />
+        <input
+            class="code-input"
+            type="text"
+            name="2"
+            maxlength="1"
+            autocomplete="off"
+        />
+        <input
+            class="code-input"
+            type="text"
+            name="3"
+            maxlength="1"
+            autocomplete="off"
+        />
+        <input
+            class="code-input"
+            type="text"
+            name="4"
+            maxlength="1"
+            autocomplete="off"
+        />
+        <input
+            class="code-input"
+            type="text"
+            name="5"
+            maxlength="1"
+            autocomplete="off"
+        />
+        <input
+            class="code-input"
+            type="text"
+            name="6"
+            maxlength="1"
+            autocomplete="off"
+        />
     </div>
     <p class="error" id="error-code">Código incorrecto</p>
 
@@ -21,9 +57,9 @@ import BtnColor from "@components/BtnColor.astro";
 
 <style>
     form#form-code {
-        position: absolute; 
+        position: absolute;
         top: 0;
-        left: 100%; 
+        left: 100%;
 
         gap: 1rem;
 
