--- a/src/components/password/FormPassword.astro
+++ b/src/components/password/FormPassword.astro
@@ -125,8 +125,6 @@ import BackgroundColors from "@components/BackgroundColors.astro";
     class FormPassword extends HTMLElement {
         constructor() {
             super();
-        }
-        connectedCallback() {
             const cacheEmailUser = JSON.parse(
                 sessionStorage.getItem("data-user"),
             );
@@ -134,8 +132,7 @@ import BackgroundColors from "@components/BackgroundColors.astro";
 
             renderFormsEmail(cacheEmailUser, emailUser, this);
             enableSendEmail(this, cacheEmailUser, emailUser);
-
-            enableSendCode(this, cacheEmailUser, emailUser);
+            enableSendCode(this);
         }
     }
 
