--- a/src/components/password/FormPassword.astro
+++ b/src/components/password/FormPassword.astro
@@ -131,7 +131,7 @@ import BackgroundColors from "@components/BackgroundColors.astro";
             const emailUser = sessionStorage.getItem("email-user");
 
             renderFormsEmail(cacheEmailUser, emailUser, this);
-            enableSendEmail(this, cacheEmailUser, emailUser);
+            enableSendEmail(cacheEmailUser, emailUser, this);
             enableSendCode(this);
         }
     }
