--- a/src/pages/password.astro
+++ b/src/pages/password.astro
@@ -3,7 +3,7 @@ import Layout from "@layouts/Layout.astro";
 import FormPassword from "@components/password/FormPassword.astro";
 ---
 
-<Layout title="BrokerView | Cambiar contraseña" hasFooter={true}>
+<Layout title="BrokerView | Cambio de contraseña" hasFooter={true}>
     <main>
         <FormPassword />
     </main>
