Cambió de contraseña

--- a/src/components/IconPassword.astro
+++ b/src/components/IconPassword.astro
@@ -24,7 +24,7 @@
 </span>
 
 <style>
-    span {
+    span.password_icon {
         position: absolute;
         cursor: pointer;
 
@@ -33,26 +33,25 @@
         height: 18px;
 
         &.show {
-            .no-view {
+            svg.no-view {
                 opacity: 0;
             }
-            .view {
+            svg.view {
                 opacity: 1;
             }
         }
 
         svg {
             position: absolute;
-        }
-        .view {
-            opacity: 0;
+            &.view {
+                opacity: 0;
+            }
         }
     }
 </style>
 <script>
     const $passwordIcons = document.querySelectorAll(".password_icon");
 
-    // Show text in input passwords
     function showPassword(icon: HTMLElement, inputPassword: HTMLInputElement) {
         icon.classList.toggle("show");
         if (inputPassword.type === "password") inputPassword.type = "text";
