--- a/src/components/forgotpw/FormCode.astro
+++ b/src/components/forgotpw/FormCode.astro
@@ -50,7 +50,7 @@ import BtnColor from "@components/BtnColor.astro";
     </div>
     <p class="error" id="error-code">Código incorrecto</p>
 
-    <span>
+    <span class="btn">
         <BtnColor text="CONFIRMAR" type="form" />
     </span>
 </form>
