--- a/src/components/forgotpw/FormEmail.astro
+++ b/src/components/forgotpw/FormEmail.astro
@@ -9,7 +9,6 @@ import BtnColor from "@components/BtnColor.astro";
             type="email"
             name="email"
             id="email"
-            placeholder="nombre@gmail.com"
         />
     </div>
 
@@ -19,7 +18,7 @@ import BtnColor from "@components/BtnColor.astro";
 
     <p class="error" id="error-email">El correo no se encuentra registrado</p>
 
-    <span>
+    <span class="btn">
         <BtnColor text="CONFIRMAR" type="form" />
     </span>
 </form>
