--- a/src/components/forms/InputSignin.astro
+++ b/src/components/forms/InputSignin.astro
@@ -1,5 +1,5 @@
 ---
-import IconPassword from "@components/forms/IconPassword.astro";
+import IconPassword from "@components/IconPassword.astro";
 import IconForm from "@components/forms/IconForm.astro";
 
 const { id, type, text, textError } = Astro.props;
