--- a/src/pages/password.astro
+++ b/src/pages/password.astro
@@ -1,10 +1,10 @@
 ---
 import Layout from "@layouts/Layout.astro";
-import FormPassword from "@components/password/FormPassword.astro";
+import Forms from "@components/forgotpw/Forms.astro";
 ---
 
 <Layout title="BrokerView | Cambio de contraseña" hasFooter={true}>
     <main>
-        <FormPassword />
+        <Forms />
     </main>
 </Layout>
