Código mejorado para el build

--- a/src/components/BrokerLogo.astro
+++ b/src/components/BrokerLogo.astro
@@ -5,7 +5,7 @@ import "@fontsource/audiowide";
 <div>
     <img
         class="icon"
-        src="/src/icons/BrokerLogo.webp"
+        src="/BrokerLogo.webp"
         alt="icono"
         width="30"
         height="30"
