--- a/src/components/BtnTheme.astro
+++ b/src/components/BtnTheme.astro
@@ -58,12 +58,12 @@ import IconForm from "@components/forms/IconForm.astro";
         if (isLight) {
             document
                 .getElementById("theme")
-                .setAttribute("src", "/src/icons/sun.svg");
+                .setAttribute("src", "/sun.svg");
             localStorage.setItem("theme", "light");
         } else {
             document
                 .getElementById("theme")
-                .setAttribute("src", "/src/icons/moon.svg");
+                .setAttribute("src", "/moon.svg");
             localStorage.setItem("theme", "dark");
         }
     };
@@ -94,7 +94,7 @@ import IconForm from "@components/forms/IconForm.astro";
             document.documentElement.classList.add("light");
             document
                 .getElementById("theme")
-                .setAttribute("src", "/src/icons/sun.svg");
+                .setAttribute("src", "/sun.svg");
         }
 
         window.localStorage.setItem("theme", theme);
@@ -121,7 +121,7 @@ import IconForm from "@components/forms/IconForm.astro";
         document.documentElement.classList.add("light");
         document
             .getElementById("theme")
-            .setAttribute("src", "/src/icons/sun.svg");
+            .setAttribute("src", "/sun.svg");
     }
 
     window.localStorage.setItem("theme", theme);
