--- a/src/sections/Form.astro
+++ b/src/sections/Form.astro
@@ -9,7 +9,7 @@ const typeForm = type == "login" ? "form-login" : "form-signin";
 ---
 
 <BackgroundColors type={typeForm}>
-    <form class={`form ${typeForm}`} id={typeForm}>
+    <form class="form" id={typeForm}>
         {type == "signin" ? <FormSignin /> : <FormLogin />}
     </form>
 </BackgroundColors>
@@ -17,48 +17,8 @@ const typeForm = type == "login" ? "form-login" : "form-signin";
 <style>
     form.form {
         position: relative;
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-auto-rows: auto;
 
-        padding: 20px;
-        gap: 20px;
-        border-radius: 8px;
         width: 100%;
         z-index: 50;
-
-        color: var(--text-color-dark);
-        background-color: var(--bg-color-dark);
-
-        body.red & {
-            border: 1px solid var(--red-light);
-        }
-        body.green & {
-            border: 1px solid var(--green-light);
-        }
-        html.light & {
-            color: var(--text-color-light);
-            background-color: var(--bg-color-light);
-        }
-    }
-
-    @media screen and (666px < width) {
-        form.form {
-            &.form-signin {
-                grid-template-columns: 1fr 1fr;
-
-                #group__lastname2 {
-                    display: none;
-                }
-
-                & .form__error-send {
-                    grid-column: span 2;
-                }
-
-                & .form__group:nth-child(8) {
-                    grid-column: span 2;
-                }
-            }
-        }
     }
 </style>
